opam-version: "2.0"
name: "camlpdf"
version: "2.6"
maintainer: "contact@coherentgraphics.co.uk"
authors: ["John Whitington"]
homepage: "http://github.com/johnwhitington/camlpdf"
bug-reports: "http://github.com/johnwhitington/camlpdf/issues"
dev-repo: "git://github.com/johnwhitington/camlpdf"
license: "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"
build: [[make]]
install: [[make "install"]]
depends: [
  "ocaml" {>= "4.10"}
  "ocamlfind" {build}
]
synopsis: "Read, write and modify PDF files"
